add sage attention, fix fuse bug

--- a/scripts/visualize_report.ipynb
+++ b/scripts/visualize_report.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "f0f4ce28",
    "metadata": {},
    "outputs": [
@@ -65,95 +65,18 @@
     "import torchvision.transforms.v2.functional as TF\n",
     "from pydantic import BaseModel\n",
     "\n",
-    "from qwenimage.reporting import ExperimentSet, SetData, compare_lpips\n",
+    "from qwenimage.reporting.visualize_barplot import compare_sets, compare_sets_with_timing\n",
     "from qwenimage.experiment import ExperimentConfig\n",
     "from qwenimage.experiments.experiments_qwen import ExperimentRegistry"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "6e244007",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "\n",
-    "\n",
-    "\n",
-    "def compare_sets(experiment_set:ExperimentSet, sort_by_mean=False, loss_fn=None):\n",
-    "    original_data = SetData(name=experiment_set.original)\n",
-    "    comparison_data = [SetData(name=comp) for comp in experiment_set.comparisons]\n",
-    "\n",
-    "    if loss_fn is None:\n",
-    "        loss_fn = lpips.LPIPS(net='alex')  # or 'vgg' or 'squeeze'\n",
-    "        if torch.cuda.is_available():\n",
-    "            loss_fn = loss_fn.cuda()\n",
-    "\n",
-    "    all_set_errors = defaultdict(list)\n",
-    "    for i in range(len(original_data)):\n",
-    "        for comp in comparison_data:\n",
-    "            lpips_error = compare_lpips(loss_fn, original_data[i], comp[i])\n",
-    "            all_set_errors[comp.name].append(lpips_error)\n",
-    "    \n",
-    "    error_stat_list = []\n",
-    "    for name, errors in all_set_errors.items():\n",
-    "        err_mean = statistics.mean(errors)\n",
-    "        err_std = statistics.stdev(errors)\n",
-    "        err_len = len(errors)\n",
-    "        error_stat_list.append({\n",
-    "            'name': f\"{name}\",\n",
-    "            'mean': err_mean,\n",
-    "            'std': err_std,\n",
-    "            'len': err_len\n",
-    "        })\n",
-    "        \n",
-    "    err_df = pd.DataFrame(error_stat_list)\n",
-    "    report_dir = ExperimentConfig().report_dir\n",
-    "    err_df.to_csv(report_dir / f\"{experiment_set.original}_{'_'.join(experiment_set.comparisons)[:100]}.csv\")\n",
-    "    \n",
-    "    if sort_by_mean:\n",
-    "        err_df = err_df.sort_values('mean', ascending=False)\n",
-    "\n",
-    "\n",
-    "    fig, ax = plt.subplots(figsize=(12, 6))\n",
-    "    x_pos = range(len(err_df))\n",
-    "\n",
-    "    # bar_x = err_df[\"name\"]\n",
-    "    bar_h = err_df[\"mean\"]\n",
-    "    bar_std = err_df[\"std\"]\n",
-    "    bars = ax.bar(\n",
-    "        x_pos, bar_h, yerr=bar_std, \n",
-    "        capsize=12, alpha=0.7, edgecolor='black'\n",
-    "    )\n",
-    "\n",
-    "    ax.set_xlabel('LPIPS error for experiment type', fontsize=12, fontweight='bold')\n",
-    "    ax.set_ylabel('Error', fontsize=12, fontweight='bold')\n",
-    "    ax.set_title(f\"LPIPS comparison\", \n",
-    "                    fontsize=14, fontweight='bold')\n",
-    "    \n",
-    "\n",
-    "    ax.set_xticks(x_pos)\n",
-    "    ax.set_xticklabels(\n",
-    "        # [row['experiment'] for _, row in plot_data.iterrows()], \n",
-    "        err_df[\"name\"],\n",
-    "        rotation=15, ha='right', fontsize=12\n",
-    "    )\n",
-    "\n",
-    "    ax.grid(axis='y', alpha=0.3)\n",
-    "\n",
-    "    \n",
-    "    for i, (idx, row) in enumerate(err_df.iterrows()):        \n",
-    "        ax.text(i - 0.2, row['mean'] + 0.01, f\"{row['mean']:.3f}\", \n",
-    "                ha='center', va='bottom', fontsize=12)\n",
-    "    \n",
-    "    plt.tight_layout()\n",
-    "\n",
-    "    plot_path = report_dir / f\"{experiment_set.original}_{'_'.join(experiment_set.comparisons)[:100]}.png\"\n",
-    "    plt.savefig(plot_path, dpi=300, bbox_inches='tight')\n",
-    "\n",
-    "    plt.show()\n",
-    "    \n"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -369,154 +292,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "91b0983e",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "from typing import Literal\n",
-    "\n",
-    "\n",
-    "def compare_sets_with_timing(experiment_set: ExperimentSet, profile_target: str = \"loop\", sort_by=\"time\", loss_fn=None, match_strategy:Literal[\"equal\", \"contain\"]=\"equal\"):\n",
-    "    \"\"\"\n",
-    "    Create dual-axis bar plot with LPIPS error (left) and profile time (right) for each experiment.\n",
-    "    \n",
-    "    Args:\n",
-    "        experiment_set: ExperimentSet with original and comparison experiments\n",
-    "        profile_target: Which profile target to plot timing for (e.g., \"loop\", \"run_once\")\n",
-    "        sort_by: Sort experiments by \"time\", \"lpips\", or None\n",
-    "        loss_fn: LPIPS loss function (will create if None)\n",
-    "    \"\"\"\n",
-    "    # Get LPIPS data\n",
-    "    original_data = SetData(name=experiment_set.original)\n",
-    "    comparison_data = [SetData(name=comp) for comp in experiment_set.comparisons]\n",
-    "\n",
-    "    if loss_fn is None:\n",
-    "        loss_fn = lpips.LPIPS(net='alex')\n",
-    "        if torch.cuda.is_available():\n",
-    "            loss_fn = loss_fn.cuda()\n",
-    "\n",
-    "    all_set_errors = defaultdict(list)\n",
-    "    for i in range(len(original_data)):\n",
-    "        for comp in comparison_data:\n",
-    "            lpips_error = compare_lpips(loss_fn, original_data[i], comp[i])\n",
-    "            all_set_errors[comp.name].append(lpips_error)\n",
-    "    \n",
-    "    lpips_stats = []\n",
-    "    # Add the original experiment with LPIPS = 0.0 (compared to itself)\n",
-    "    lpips_stats.append({\n",
-    "        'experiment': experiment_set.original,\n",
-    "        'lpips_mean': 0.0,\n",
-    "        'lpips_std': 0.0\n",
-    "    })\n",
-    "    # Add comparison experiments\n",
-    "    for name, errors in all_set_errors.items():\n",
-    "        err_mean = statistics.mean(errors)\n",
-    "        err_std = statistics.stdev(errors)\n",
-    "        lpips_stats.append({\n",
-    "            'experiment': name,\n",
-    "            'lpips_mean': err_mean,\n",
-    "            'lpips_std': err_std\n",
-    "        })\n",
-    "    \n",
-    "    lpips_df = pd.DataFrame(lpips_stats)\n",
-    "    \n",
-    "    # Get timing data\n",
-    "    report_dir = ExperimentConfig().report_dir\n",
-    "    timing_data = []\n",
-    "    # Include original and all comparisons\n",
-    "    all_experiments = [experiment_set.original] + list(experiment_set.comparisons)\n",
-    "    for name in all_experiments:\n",
-    "        csv_path = report_dir / f\"{name}.csv\"\n",
-    "        if csv_path.exists():\n",
-    "            df = pd.read_csv(csv_path, index_col=0)\n",
-    "            if match_strategy == \"equal\":\n",
-    "                target_row = df[df['name'] == profile_target]\n",
-    "            elif match_strategy == \"contain\":\n",
-    "                target_row = df[df['name'].str.contains(profile_target, case=False, na=False)]\n",
-    "            else:\n",
-    "                raise ValueError()\n",
-    "\n",
-    "            if not target_row.empty:\n",
-    "                timing_data.append({\n",
-    "                    'experiment': name,\n",
-    "                    'time_mean': target_row['mean'].values[0],\n",
-    "                    'time_std': target_row['std'].values[0]\n",
-    "                })\n",
-    "    \n",
-    "    timing_df = pd.DataFrame(timing_data)\n",
-    "    \n",
-    "    # Merge data\n",
-    "    combined_df = pd.merge(lpips_df, timing_df, on='experiment', how='inner')\n",
-    "    \n",
-    "    # Sort if requested\n",
-    "    if sort_by == \"time\":\n",
-    "        combined_df = combined_df.sort_values('time_mean', ascending=False)\n",
-    "    elif sort_by == \"lpips\":\n",
-    "        combined_df = combined_df.sort_values('lpips_mean', ascending=False)\n",
-    "    \n",
-    "    # Create dual-axis plot\n",
-    "    fig, ax1 = plt.subplots(figsize=(14, 7))\n",
-    "    \n",
-    "    x = np.arange(len(combined_df))\n",
-    "    width = 0.35\n",
-    "    \n",
-    "    # Left axis - LPIPS\n",
-    "    ax1.set_xlabel('Experiment', fontsize=12, fontweight='bold')\n",
-    "    ax1.set_ylabel('LPIPS Error', fontsize=12, fontweight='bold', color='tab:blue')\n",
-    "    bars1 = ax1.bar(x - width/2, combined_df['lpips_mean'], width, \n",
-    "                     yerr=combined_df['lpips_std'], capsize=5, \n",
-    "                     label='LPIPS Error', color='tab:blue', alpha=0.7, edgecolor='black')\n",
-    "    ax1.tick_params(axis='y', labelcolor='tab:blue')\n",
-    "    ax1.grid(axis='y', alpha=0.3)\n",
-    "    \n",
-    "    # Right axis - Time\n",
-    "    ax2 = ax1.twinx()\n",
-    "    ax2.set_ylabel(f'Time (s) - {profile_target}', fontsize=12, fontweight='bold', color='tab:orange')\n",
-    "    bars2 = ax2.bar(x + width/2, combined_df['time_mean'], width,\n",
-    "                     yerr=combined_df['time_std'], capsize=5,\n",
-    "                     label=f'{profile_target} Time', color='tab:orange', alpha=0.7, edgecolor='black')\n",
-    "    ax2.tick_params(axis='y', labelcolor='tab:orange')\n",
-    "    \n",
-    "    # Align both axes to start at 0\n",
-    "    ax1.set_ylim(bottom=0)\n",
-    "    ax2.set_ylim(bottom=0)\n",
-    "    \n",
-    "    # Set x-axis labels\n",
-    "    ax1.set_xticks(x)\n",
-    "    ax1.set_xticklabels(combined_df['experiment'], rotation=45, ha='right', fontsize=10)\n",
-    "    \n",
-    "    # Add value labels on bars\n",
-    "    for i, row in combined_df.iterrows():\n",
-    "        idx = combined_df.index.get_loc(i)\n",
-    "        # LPIPS value\n",
-    "        ax1.text(idx - width/2, row['lpips_mean'] + row['lpips_std'] + 0.001, \n",
-    "                f\"{row['lpips_mean']:.4f}\", ha='center', va='bottom', \n",
-    "                fontsize=9, color='tab:blue')\n",
-    "        # Time value\n",
-    "        ax2.text(idx + width/2, row['time_mean'] + row['time_std'] + 0.01,\n",
-    "                f\"{row['time_mean']:.3f}s\", ha='center', va='bottom',\n",
-    "                fontsize=9, color='tab:orange')\n",
-    "    \n",
-    "    # Title and legend\n",
-    "    ax1.set_title(f'LPIPS Error vs {profile_target.title()} Time Comparison\\nBaseline: {experiment_set.original}',\n",
-    "                  fontsize=14, fontweight='bold', pad=20)\n",
-    "    \n",
-    "    # Combine legends\n",
-    "    lines1, labels1 = ax1.get_legend_handles_labels()\n",
-    "    lines2, labels2 = ax2.get_legend_handles_labels()\n",
-    "    ax1.legend(lines1 + lines2, labels1 + labels2, loc='upper left', fontsize=10)\n",
-    "    \n",
-    "    plt.tight_layout()\n",
-    "    \n",
-    "    # Save plot\n",
-    "    plot_path = report_dir / f\"{experiment_set.original}_dual_axis_{profile_target}.png\"\n",
-    "    plt.savefig(plot_path, dpi=300, bbox_inches='tight')\n",
-    "    \n",
-    "    plt.show()\n",
-    "    \n",
-    "    return combined_df\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
