--- a/scripts/train.ipynb
+++ b/scripts/train.ipynb
@@ -30,16 +30,16 @@
      "text": [
       "/usr/lib/python3/dist-packages/sklearn/utils/fixes.py:25: UserWarning: pkg_resources is deprecated as an API. See https://setuptools.pypa.io/en/latest/pkg_resources.html. The pkg_resources package is slated for removal as early as 2025-11-30. Refrain from using this package or pin to Setuptools<81.\n",
       "  from pkg_resources import parse_version  # type: ignore\n",
-      "2025-11-22 18:13:10.673389: I tensorflow/core/util/port.cc:153] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
-      "2025-11-22 18:13:10.687858: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:467] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+      "2025-11-23 10:48:20.190181: I tensorflow/core/util/port.cc:153] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
+      "2025-11-23 10:48:20.204255: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:467] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
       "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
-      "E0000 00:00:1763835190.705243 2236633 cuda_dnn.cc:8579] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
-      "E0000 00:00:1763835190.710795 2236633 cuda_blas.cc:1407] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
-      "W0000 00:00:1763835190.724588 2236633 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
-      "W0000 00:00:1763835190.724603 2236633 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
-      "W0000 00:00:1763835190.724605 2236633 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
-      "W0000 00:00:1763835190.724607 2236633 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
-      "2025-11-22 18:13:10.729261: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "E0000 00:00:1763894900.221429 2465541 cuda_dnn.cc:8579] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+      "E0000 00:00:1763894900.227066 2465541 cuda_blas.cc:1407] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+      "W0000 00:00:1763894900.240375 2465541 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
+      "W0000 00:00:1763894900.240390 2465541 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
+      "W0000 00:00:1763894900.240392 2465541 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
+      "W0000 00:00:1763894900.240394 2465541 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
+      "2025-11-23 10:48:20.244577: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
       "To enable the following instructions: AVX512F AVX512_VNNI AVX512_BF16 AVX512_FP16 AVX_VNNI, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
      ]
     },
@@ -129,6 +129,20 @@
       "and open an issue at: https://github.com/bitsandbytes-foundation/bitsandbytes/issues\n",
       "\n"
      ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f70e31b9ba79496a921f0e7d0cddfed4",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Fetching 7 files:   0%|          | 0/7 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -137,15 +151,70 @@
     "from pathlib import Path\n",
     "import argparse\n",
     "\n",
-    "from ruamel.yaml import YAML\n",
+    "import yaml\n",
     "import diffusers\n",
     "\n",
     "\n",
     "from wandml.trainers.experiment_trainer import ExperimentTrainer\n",
     "from wandml import WandDataPipe\n",
     "import wandml\n",
+    "from wandml import WandAuth\n",
+    "from wandml import utils as wandml_utils\n",
+    "from wandml.trainers.datamodels import ExperimentTrainerParameters\n",
+    "from wandml.trainers.experiment_trainer import ExperimentTrainer\n",
     "\n",
-    "from qwenimage.finetuner import QwenLoraFinetuner\n"
+    "\n",
+    "from qwenimage.finetuner import QwenLoraFinetuner\n",
+    "from qwenimage.sources import StyleSourceWithRandomRef, StyleImagetoImageSource\n",
+    "from qwenimage.task import TextToImageWithRefTask\n",
+    "from qwenimage.datamodels import QwenConfig\n",
+    "from qwenimage.foundation import QwenImageFoundation\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "18bf116a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'qwenimage.sources.StyleImagetoImageSource'> of len2\n"
+     ]
+    }
+   ],
+   "source": [
+    "src = StyleImagetoImageSource(\n",
+    "    csv_path=\"/data/chatgpt-style-transfer-data/output/results.csv\",\n",
+    "    base_dir=\"/data/chatgpt-style-transfer-data\",\n",
+    "    style_title=\"Simpsons\",\n",
+    "    data_range=[2, 35],\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'qwenimage.sources.StyleImagetoImageSource'> of len33\n"
+     ]
+    }
+   ],
+   "source": [
+    "src = StyleImagetoImageSource(\n",
+    "    csv_path=\"/data/chatgpt-style-transfer-data/output/results.csv\",\n",
+    "    base_dir=\"/data/chatgpt-style-transfer-data\",\n",
+    "    style_title=\"Simpsons\",\n",
+    "    data_range=[0, 2],\n",
+    ")"
    ]
   },
   {
@@ -521,7 +590,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
