--- a/scripts/edit_datasets.ipynb
+++ b/scripts/edit_datasets.ipynb
@@ -89,7 +89,7 @@
     "    edit_type_concat = concatenate_datasets(to_concat)\n",
     "    all_edit_datasets.append(edit_type_concat)\n",
     "\n",
-    "# consistent ordering for indexing, also allow extension\n",
+    "# consistent ordering for indexing, also allow extension by increasing total_per\n",
     "join_ds = interleave_datasets(all_edit_datasets)"
    ]
   },
