triplet loss experiments (prelim)

--- a/scripts/logit_normal_dist.ipynb
+++ b/scripts/logit_normal_dist.ipynb
@@ -76,17 +76,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "aec3ae8f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x74338838e380>]"
+       "[<matplotlib.lines.Line2D at 0x7ea4980d6b30>]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "id": "3bc68e7c",
    "metadata": {},
    "outputs": [
@@ -127,7 +127,7 @@
        "1.0986122886681098"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "id": "facb782e",
    "metadata": {},
    "outputs": [
@@ -149,7 +149,7 @@
        "tensor([1.0000, 0.8808, 0.0000])"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -166,11 +166,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "f006f2fa",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([1.0000, 0.7484, 0.0000])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t = torch.tensor([1, 0.5, 0])\n",
+    "t_i = TimestepDistUtils.t_shift(\n",
+    "    mu=torch.tensor(1.09),\n",
+    "    sigma=1.0,\n",
+    "    t=t\n",
+    ")\n",
+    "t_i"
+   ]
   },
   {
    "cell_type": "code",
